--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "starter-apps-crb",
-	"version": "1.0.0",
+	"version": "1.0.4",
+	"description" : "plantilla desarrollo de aplicaciones",
+	"author": "Mateo Niampira <a.aplicaciones2@cruzrojabogota.org.co>",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -23,8 +25,8 @@
 		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.6"
 	},
-	"type": "module",
 	"dependencies": {
 		"dotenv": "^16.3.1"
-	}
+	},
+	"bin": "./bin/global.cjs"
 }
