--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.6"
 	},
+	"type": "module",
 	"dependencies": {
 		"@azure/msal-node": "^1.17.3",
 		"@fortawesome/fontawesome-free": "^6.4.0",
